--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '0 12 * * FRI'
+    - cron: '35 13 * * 6'
 
 jobs:
   ibm-cloud-restart:
